# StackCompiler

./: Main.hs  StackCompiler.cabal
StackCompiler/: ArithLang.hs  Compiler.hs  Parser.hs  StackLang.hs
