name:                StackCompiler
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Tim Thornton
maintainer:          t.thornton6@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable StackCompiler
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    

  build-depends:
    base >=4.6 && <4.7,
    parsec >=3.1.5

  -- hs-source-dirs:      
  default-language:    Haskell2010
